--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="bundle.js" ></script>
+    <script src="dist/bundle.js" ></script>
   </body>
 </html>
